tests/baselines/reference/conflictingTypeAnnotatedVar.errors.txt
==== tests/cases/compiler/conflictingTypeAnnotatedVar.ts (4 errors) ====
    var foo: string;
    function foo(): number { }
             ~~~
!!! error TS2300: Duplicate identifier 'foo'.
                    ~~~~~~
!!! error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value or consist of a single 'throw' statement.
    function foo(): number { }
             ~~~
!!! error TS2300: Duplicate identifier 'foo'.
                    ~~~~~~
!!! error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value or consist of a single 'throw' statement.